[tools][system-analyzer] Change naming conventions
This CL establishes a naming consistency
across the app by renaming classes.

Bug: v8:10644
Change-Id: Id075d9aa36ac6f03af0224feb0e38985b1445013

--- a/tools/system-analyzer/index.html
+++ b/tools/system-analyzer/index.html
@@ -121,7 +121,8 @@ globalThis.app = new App("#log-file-reader", "#map-panel", "#timeline-panel",
   </div>
   <div id="instructions">
     <h2>Instructions</h2>
-    <p>Unified web interface for analyzing the trace information of the Maps/ICs</p>
+    <p>Unified web interface for analyzing the trace information of the Maps/ICs
+    </p>
     <ul>
       <li> Visualize Map trees that have gathered</li>
       <li><code> /path/to/d8 --trace-maps $FILE</code></li>
